--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ input[type="radio"]:checked {
   width: calc(60% - 5px);
 }
 
-.form button {
+.form button, #editModal button {
   padding: 8px 20px;
   background-color: #4CAF50;
   color: white;
@@ -111,7 +111,7 @@ table {
 
 #taskTable tbody input[type="checkbox"] {
   transform: scale(1.5);
-  margin: 0 15%;
+  margin: 0 10%;
 }
 
 .completed {
@@ -192,6 +192,46 @@ a {
 }
 
 .a-btn{
+  padding: 5px;
   text-decoration: none;
   cursor: pointer;
 }
+
+#editModal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  overflow: auto;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+#modalHeader {
+  text-align: center;
+}
+
+#modalContainer {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 0px 5% 15px 5%;
+  border-radius: 10px;
+}
+
+.modal-content {
+  padding: 10px 0px;
+}
+
+.modal-buttons {
+  text-align: center;
+}
+
+#editModal button{
+  margin-top: 25px;
+  width: auto;
+}
+
