--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ nav h1 {
 .container {
   max-width: 60%;
   min-width: 30%;
-  margin: 20px auto;
+  margin: 10px auto;
   padding: 20px;
 }
 
@@ -70,6 +70,15 @@ nav h1 {
   margin-right: 10px;
   height: 16px;
 }
+
+.list input[type="text"]{
+  width: 100%;
+}
+
+.list {
+  justify-content: normal;
+}
+
 
 .form input[type="text"],
 .form input[type="date"]{
@@ -312,3 +321,78 @@ a {
 #dueDateHeader {
   cursor:pointer;
 }
+
+#listName {
+  display:flex;
+  justify-content:center;
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  margin: 10% auto;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 50%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#listNameContainer a {
+  color: #4CAF50;
+  text-decoration: none;
+}
+
+#listNameContainer a:hover{
+  color: #45a049;
+  text-decoration: none;
+}
+
+#listOptions {
+  display: none;
+  position: absolute;
+  top: 50px;
+  right: auto;
+  background-color: #222;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+}
+
+#listOptions.show {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  border: 2px solid #444;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+#listOptions span:hover{
+  color: #45a049;
+}
+
