--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ table {
 
 #taskTable tbody input[type="checkbox"] {
   transform: scale(1.5);
-  margin: 0 10%;
+  margin: 0 5%;
 }
 
 .table-flex, .table-flex a {
@@ -399,7 +399,13 @@ a {
 }
 
 .a-subtask{
-  background-color:white
+  color:black !important;
+  font-weight: bold;
+}
+
+.dark-mode .a-subtask{
+  color:white !important;
+  font-weight: bold;
 }
 
 .task-row {
@@ -426,5 +432,32 @@ a {
 
 .subtask-row.subtask-visible {
   display: table-row;
+}
+
+.subtask-list{
+  background-color: #e1e1e182;
+  width: 100%;
+}
+
+.dark-mode .subtask-list{
+  background-color: #00000029;
+  width: 100%;
+}
+
+.subtask-container {
+  display: flex;
+  justify-content: center;
+}
+
+.subtask-list {
+  width: 100%;
+}
+
+.subtask-list table {
+  width: 100%;
+}
+
+.subtask-list td {
+  width: 25%;
 }
 
